# kinematic-calibration

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md  main.cpp
cmake/: kcConfig.cmake.in
data/: P_3R.txt  P_Stanford.txt  Q_3R.txt  Q_Stanford.txt
examples/: 3R.cpp  CMakeLists.txt  KUKA.cpp  Stanford.cpp
examples/templates/: 3R.hpp.in  KUKA.hpp.in  Stanford.hpp.in
include/kc/: CostFunction.hpp  Link.hpp  Robot.hpp  types.hpp  utils.hpp
src/: Link.cpp
